Save/Update files [ci skip]

--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1346,7 +1346,7 @@
  RANDOM_NEW_WORLD_BLOCKED_TOO_LATE:0 "§Yランダムな新世界§!は、あなたの開始日が$DATE$より後の場合は有効にすることはできません。"
  LOST_ESTATE_INFLUENCE_MOD:0 "彼らの影響は今$VAL$（$DIFF$）です。"
  LOST_ESTATE_LOYALTY_MOD:0 "彼らの忠誠は今$VAL$（$DIFF$）です。"
- MAJOR_DLCS_NOT_IN_SAVE:1 "§Y- セーブゲーム内で以前に有効または無効にされた1つ以上のDLCが切り替えられました。§!"
+ MAJOR_DLCS_NOT_IN_SAVE:1 "§Y- セーブゲーム内で以前に有効化または無効化していた1つ以上のDLCが切り替えられています。§!"
  CANNOT_OFFER_TOO_HIGH_WARSCORE:0 "§R戦勝点を100%以上必要とする貢物は提案できません。§!"
  CANNOT_DEMAND_TOO_HIGH_WARSCORE:0 "§R戦勝点を100%以上必要とする貢物は要求できません。§!"
  FASTER:0 "早くする"
@@ -1430,7 +1430,7 @@
  estate_disasters.18.a:0 "$MONARCHTITLE$は支配権を取り戻した。"
  EST_CRUSHED_BRAHMINS:0 "バラモンは抑圧されました"
  EST_CRUSHED_VAISYAS:0 "ヴァイシャは抑圧されました"
- EST_CRUSHED_JAINS:0 "ジャイナ教徒は抑圧されました"
+ EST_CRUSHED_JAINS:0 "ジャイナは抑圧されました"
  curtail_estate_brahmins_title:0 "バラモンを抑圧"
  curtail_estate_brahmins_desc:0 "バラモンは国家の世俗的な問題に大きな影響を及ぼしている。国家問題への影響を制限するためには、権力と特権を縮小する必要がある。"
  curtail_estate_vaisyas_title:1 "ヴァイシャへの抑圧"
