--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -385,7 +385,7 @@
  estate_nobles_condottieri_rivals:0 "[agenda_country.GetUsableName]に対するコンドッティエーリ派遣"
  estate_nobles_support_independence:0 "[agenda_country.GetAdjective]への独立支援"
  estate_nobles_retake_core:0 "[agenda_province.GetName]の奪還"
- estate_nobles_crush_revolts:0 "反乱軍の鎮圧"
+ estate_nobles_crush_revolts:0 "反乱軍をつぶせ"
  estate_nobles_regain_liberty:0 "自由の回復"
  estate_nobles_convert_province_culture:0 "[agenda_province.GetName]を[Root.Culture.GetName]文化に"
  estate_nobles_protect_our_culture:0 "[agenda_province.GetName]における[Root.GetAdjective]の人々の保護"
@@ -393,7 +393,7 @@
  estate_nobles_expand_into_x:0 "[agenda_province.GetAreaName]への拡張"
  estate_nobles_complete_conquest_of_x:0 "[agenda_province.GetAreaName]征服の完遂"
  estate_nobles_annex_subject:0 "[agenda_country.GetUsableName]の併合"
- estate_nobles_build_an_army:0 "国家のための軍隊を編制"
+ estate_nobles_build_an_army:0 "自国用軍隊の編成"
  estate_nobles_bigger_army_than_rival:0 "[agenda_country.GetUsableName]からの保護"
  estate_nobles_build_up_manpower_reserves:0 "予備人的資源の増強"
  estate_nobles_recover_abysmal_prestige:0 "威信の回復"
@@ -451,7 +451,7 @@
  estate_nomadic_tribes_befriend_rival_of_rival:1 "[rival_country.GetUsableName]のライバルとの友好"
  estate_nomadic_tribes_relations_with_X:0 "[agenda_country.GetUsableName]との関係改善"
  estate_nomadic_tribes_retake_core:0 "[agenda_province.GetName]の奪還"
- estate_nomadic_tribes_crush_revolts:0 "反乱軍の鎮圧"
+ estate_nomadic_tribes_crush_revolts:0 "反乱軍をつぶせ"
  estate_nomadic_tribes_regain_liberty:0 "自由の回復"
  estate_nomadic_tribes_convert_province_culture:0 "[agenda_province.GetName]を[Root.Culture.GetName]文化に"
  estate_nomadic_tribes_protect_our_culture:0 "[agenda_province.GetName]における[Root.GetAdjective]の人々の保護"
@@ -470,7 +470,7 @@
  estate_maratha_condottieri_rivals:0 "[agenda_country.GetUsableName]に対するコンドッティエーリ派遣"
  estate_maratha_support_independence:0 "[agenda_country.GetAdjective]への独立支援"
  estate_maratha_retake_core:0 "[agenda_province.GetName]の奪還"
- estate_maratha_crush_revolts:0 "反乱軍の鎮圧"
+ estate_maratha_crush_revolts:0 "反乱軍をつぶせ"
  estate_maratha_regain_liberty:0 "自由の回復"
  estate_maratha_convert_province_culture:0 "[agenda_province.GetName]を[Root.Culture.GetName]文化に"
  estate_maratha_protect_our_culture:0 "[agenda_province.GetName]における[Root.GetAdjective]の人々の保護"
@@ -478,7 +478,7 @@
  estate_maratha_expand_into_x:0 "[agenda_province.GetAreaName]への拡張"
  estate_maratha_complete_conquest_of_x:0 "[agenda_province.GetAreaName]征服の完遂"
  estate_maratha_annex_subject:0 "[agenda_country.GetUsableName]の併合"
- estate_maratha_build_an_army:0 "国家のための軍隊を編制"
+ estate_maratha_build_an_army:0 "自国用軍隊の編成"
  estate_maratha_bigger_army_than_rival:0 "[agenda_country.GetUsableName]からの保護"
  estate_maratha_build_up_manpower_reserves:0 "予備人的資源の増強"
  estate_maratha_recover_abysmal_prestige:0 "威信の回復"
@@ -487,7 +487,7 @@
  estate_rajput_condottieri_rivals:0 "[agenda_country.GetUsableName]に対するコンドッティエーリ派遣"
  estate_rajput_support_independence:0 "[agenda_country.GetAdjective]への独立支援"
  estate_rajput_retake_core:0 "[agenda_province.GetName]の奪還"
- estate_rajput_crush_revolts:0 "反乱軍の鎮圧"
+ estate_rajput_crush_revolts:0 "反乱軍をつぶせ"
  estate_rajput_regain_liberty:0 "自由の回復"
  estate_rajput_convert_province_culture:0 "[agenda_province.GetName]を[Root.Culture.GetName]文化に"
  estate_rajput_protect_our_culture:0 "[agenda_province.GetName]における[Root.GetAdjective]の人々の保護"
@@ -495,7 +495,7 @@
  estate_rajput_expand_into_x:0 "[agenda_province.GetAreaName]への拡張"
  estate_rajput_complete_conquest_of_x:0 "[agenda_province.GetAreaName]征服の完遂"
  estate_rajput_annex_subject:0 "[agenda_country.GetUsableName]の併合"
- estate_rajput_build_an_army:0 "国家のための軍隊を編制"
+ estate_rajput_build_an_army:0 "自国用軍隊の編成"
  estate_rajput_bigger_army_than_rival:0 "[agenda_country.GetUsableName]からの保護"
  estate_rajput_build_up_manpower_reserves:0 "予備人的資源の増強"
  estate_rajput_recover_abysmal_prestige:0 "威信の回復"
@@ -569,16 +569,16 @@
  estate_dhimmi_relations_with_X:0 "[agenda_country.GetUsableName]との関係改善"
  agenda_automatically_completed:0 "この議題は自動的に完了します。"
  local_nobles_displeased:0 "在地貴族の不満"
- local_clergy_displeased:0 "地方の聖職者の不満"
- local_burghers_displeased:0 "地方の市民の不満"
- local_brahmins_displeased:0 "地方のバラモンの不満"
- local_rajputs_displeased:0 "地方のラージプートの不満"
- local_marathas_displeased:0 "地方のマラーターの不満"
- local_nomadic_tribes_displeased:0 "地方の部族の不満"
- local_cossacks_displeased:0 "地方のコサックの不満"
- local_vaisyas_displeased:0 "地方のヴァイシャの不満"
- local_jains_displeased:0 "地方のジャイナ教徒の不満"
- local_dhimmi_displeased:0 "地方のズィンミーの不満"
+ local_clergy_displeased:0 "在地聖職者の不満"
+ local_burghers_displeased:0 "在地市民の不満"
+ local_brahmins_displeased:0 "在地バラモンの不満"
+ local_rajputs_displeased:0 "在地ラージプートの不満"
+ local_marathas_displeased:0 "在地マラーターの不満"
+ local_nomadic_tribes_displeased:0 "在地部族の不満"
+ local_cossacks_displeased:0 "在地コサックの不満"
+ local_vaisyas_displeased:0 "在地ヴァイシャの不満"
+ local_jains_displeased:0 "在地ジャイナの不満"
+ local_dhimmi_displeased:0 "在地ズィンミーの不満"
  EST_VAL_AGENDA_DENIED:1 "議題の失敗: §R$VAL$§!"
  prospering_production:0 "生産の繁栄"
  desc_prospering_production:0 "国家の投資により地方の経済は繁栄している。"
@@ -1007,7 +1007,7 @@
  estate_rajput_land_rights_desc:1 "[Root.GetRajputsName]に土地を与えることで、国の統治を支援する有能な戦士がすぐに手に入ることが保証されるだろう。"
  estate_nobles_nobility_primacy_desc:0 "[Root.GetNobilityName]に軍事における自由を与えることで、彼らの貢献の補償に多大な費用がかかるとしても、我々の力を大幅に強化できるだろう。"
  estate_nobles_officer_corp_desc:0 "[Root.GetNobilityName]は人を率いる術を経験している。彼らが我々の軍隊を率いるものであるべきだというのは賢明だろう。"
- estate_nobles_levies_desc:0 "わが軍の大部分は [Root.GetNobilityName]から提供される徴募兵によって占められている。相応の補償と引き換えに、より多くの兵士を提供させることも可能だ。"
+ estate_nobles_levies_desc:0 "わが軍の大部分は[Root.GetNobilityName]から提供される徴募兵によって占められている。相応の補償と引き換えに、より多くの兵士を提供させることも可能だ。"
  estate_nobles_advisors_desc:0 "他の誰よりも自分の知性の育成に専念できる[Root.GetNobilityName]に勝る助言などない。"
  estate_nobles_right_of_counsel_desc:0 "[Root.GetNobilityName]は、その影響を恐れることなく、[Root.Monarch.GetTitle]に対し、率直かつ自由に話す権利を持っている必要がある。"
  estate_nobles_french_strong_duchies_desc:0 "フランスは分権化された国家であり、地方の公爵や伯爵は[Root.Monarch.GetTitle]からかなり独立を保っている。この機構には利点もあるが、王権の優位性を維持することにとっては大きな問題である。"
