--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -780,7 +780,7 @@
  flavor_mch.EVTNAME8:0 "満州の勃興"
  flavor_mch.EVTDESC8:0 "満州地域の女真族は、いつも[Root.GetName]に忠実な朝貢国であった。身の程を弁え、我々に仕えていたのだ。\nしかし、最近ではその態度が大きく変わりつつある。我々が年貢を貰って満足している間に、征服欲溢れる女真族は他部族を征服し、地域と部族を一つにまとめ上げたのだ。"
  flavor_mch.EVTOPTA8:0 "天の慈悲があらんことを。"
- mch_missions.5.b:0 "この島の生活もいいものだが..."
+ mch_missions.5.b:0 "この島の生活もいいものだが…"
  kor_defeat_shogun_tt:1 "宗教の§Y神道§!を調和中に本ミッションが達成された場合、宗教的調和の進捗が§G+15§!されます。\n\n既に§Y神道§!を調和している場合、代わりに軍事力が§G+100§!されます。"
  sinicize_culture_at:0 "新世界またはオセアニアにない§Y[Root.Culture.GetGroupName]§!文化の州をすべて[Root.GetName]またはその従属国が領有している。"
  zhuang_new:0 "シナ・チワン"
