--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -282,7 +282,7 @@
  fra_kingdom_sea_modifier:0 "海の王国"
  fra_union_with_milan_modifier:0 "ミラノとの連合"
  fra_cutthroat_diplomacy_modifier:0 "熾烈な外交"
- fra_attracted_leonardo_da_vinci_modifier:0 "レオナルド・ダ・ヴィンチの仕事場"
+ fra_attracted_leonardo_da_vinci_modifier:0 "レオナルド・ダ・ヴィンチの工房"
  fra_expansion_in_italy_modifier:0 "イタリアでの拡大"
  fra_host_city_of_lights_modifier:0 "光の都の主"
  fra_supplementary_pi_and_dip_rep_modifier:0 "ローマの征服"
@@ -4652,7 +4652,7 @@
  flavor_rus.122.desc:1 "キエフ・ルーシの破壊者であり、我々の民を抑圧したタタールの遊牧民はもういない！最後の遊牧民は東に逃げ、あるいは戦場で死に、[Root.GetAdjective]の国境は東へ移動していく。[Root.GetUsableNameCap]は二度と外国の侵略者の下僕になることはないだろう！"
  flavor_rus.122.a:0 "祖国のために！"
  flavor_rus.123.t:0 "官僚の焦点"
- flavor_rus.123.desc:0 "[Root.GetUsableName]の局が新たな次元に拡大したことで、残された資源は、国家の素晴らしい側面の1つに集中するために使用できるようになった。"
+ flavor_rus.123.desc:0 "[Root.GetUsableName]の統治が新たな段階に拡大したことで、余剰官僚を国家の大いなる方向の1つに集中して使用できるようになった。"
  flavor_rus.123.a:0 "国家の統治に焦点を当てろ。"
  flavor_rus.123.b:0 "商業利益の拡大に焦点を当てろ。"
  flavor_rus.123.c:0 "軍事的発展に焦点を当てろ。"
@@ -5115,7 +5115,7 @@
  flavor_gbr.16.i:0 "植民地総督を雇おう。"
  flavor_gbr.16.j:0 "海軍改革者を雇おう。"
  flavor_gbr.16.k:0 "探検家を雇おう。"
- flavor_gbr.16.l:0 "密偵長を雇おう。"
+ flavor_gbr.16.l:0 "密偵頭を雇おう。"
  flavor_gbr.16.m:0 "政治家を雇おう。"
  flavor_gbr.16.n:0 "交易商を雇おう。"
  flavor_gbr.16.o:0 "陸軍組織者を雇おう。"
