--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1331,7 +1331,7 @@
  EVTOPTA5056:0 "我々はこれを忘れないだろう。"
  EVTOPTB5056:0 "緊張の緩和を試みる。"
  EVTNAME5057:0 "強化の取り組み"
- EVTDESC5057:1 "荘麗な注目を常に集める問題である領土の強化は、値段はかかるが重要な事業である。戦略的に非常に重要な位置にあると主張し、[Root.GetName]の地方当局は、州の要塞の改修のための資金を要求している。"
+ EVTDESC5057:1 "王室の永遠の関心事である領土の防衛力強化は、値段はかかるが重要な事業である。戦略的に非常に重要な位置にあると主張し、[Root.GetName]の地方当局は、州の要塞の改修のための資金を要求している。"
  EVTOPTA5057:0 "これは最も重要だ。"
  EVTOPTB5057:0 "金がかかりすぎる。"
  EVTNAME5058:0 "貴族の特権の要求"
@@ -2138,7 +2138,7 @@
  EVTOPTA6111:0 "栄光の日々は戻ってくるだろう。"
  EVTOPTB6111:0 "少しのお金で物事を整理できるだろう。"
  EVTNAME6112:0 "新兵は軍旗に集う"
- EVTDESC6112:0 "我が国の徴兵制度は非常に成功している。貧しい人々、絶望的な人、さらには愛国者さえも、旗の下に群がっている。将軍は喜んでいる。"
+ EVTDESC6112:0 "自国の徴兵制度は非常に成功している。貧しい者、苦境にある者だけでなく、愛国者さえも旗の下に群がっており、将軍は喜んでいる。"
  EVTOPTA6112:0 "すぐに軍隊に連れて行こう。"
  EVTOPTB6112:0 "いや、我々はここで長期的に考える必要がある。"
  EVTNAME6113:0 "民心は徴兵を望まず"
