--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -910,7 +910,7 @@
  army_reformer:0 "陸軍改革者"
  trader:0 "交易商"
  theologian:0 "神学者"
- spymaster:0 "密偵長"
+ spymaster:0 "密偵頭"
  colonial_governor:0 "植民地総督"
  diplomat:0 "外交官"
  philosopher_desc:0 "自然界の基本的な知識、現実と存在の研究に専念する顧問である。"
@@ -7472,11 +7472,11 @@
  COLONIES:0 "植民地"
  theology:0 "神学者"
  colonial:0 "植民地総督"
- spy:0 "諜報頭"
+ spy:0 "密偵頭"
  trade:0 "交易商"
  desc_theology:0 "我々の神学者の評判は国境を越えて広がっている。我々の政府に彼がいるのは本当に幸運なことだ。"
  desc_colonial:0 "我々の植民地総督の評判は国境を越えて広がっている。我々の政府に彼がいるのは本当に幸運なことだ。"
- desc_spy:0 "我々の諜報頭の評判は国境を越えて広がっている。我々の政府に彼がいるのは本当に幸運なことだ。"
+ desc_spy:0 "我々の密偵頭の評判は国境を越えて広がっている。我々の政府に彼がいるのは本当に幸運なことだ。"
  STABHIT_FROM_MIL_ACCESS:0 "軍事通行権を持っている"
  HORDENOPROTECTORATE:0 "ステップの遊牧民は保護国となることができません。"
  THEYATWAR:0 "彼らの戦争中に、我々はこれを行うことはできません。"
