--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1270,7 +1270,7 @@
  flavor_rus.EVTOPTA1005:0 "これらの変更を肯定する。"
  flavor_rus.EVTOPTB1005:0 "これらの考えを禁止する。"
  flavor_rus.EVTNAME1006:0 "ラスコール"
- flavor_rus.EVTDESC1006:0 "ロシアとギリシャの説教、儀式、本の間には数多くの矛盾があり、1652年に、総主教であったニコンはこれらの問題を研究するために教会会議を開催した。2回目の会議は1666年に開催され、過去の伝統の多くを非難するだけでなく、これを修正するために数多くの改革が行われた。これはラスコール（教会分裂）と呼ばれる大きな分裂をもたらした。これらの変化に反対する人々は、古儀式派またはラスコーリニキとして知られるようになった。"
+ flavor_rus.EVTDESC1006:0 "ロシア教会の指導者は、ロシアとギリシャの説教、儀式、書物の間には数多くの矛盾があることに気付いていた。1652年に、総主教であったニコンはこれらの問題を研究するために教会会議を開催した。2回目の会議は1666年に開催され、過去の伝統の多くを非難するだけでなく、これを修正するために数多くの改革が行われた。これはラスコール（教会分裂）と呼ばれる大きな分裂をもたらした。これらの変化に反対する人々は、古儀式派またはラスコーリニキとして知られるようになった。"
  flavor_rus.EVTOPTA1006:0 "これらの改革は必要だ。"
  flavor_rus.EVTOPTB1006:0 "古い伝統を支援する。"
  flavor_rus.EVTNAME1007:0 "ピョートル大帝の改革"
@@ -2807,7 +2807,7 @@
  flavor_per.EVTOPTB1:0 "外交改革を実施する。"
  flavor_per.EVTOPTC1:0 "軍事改革を実施する。"
  flavor_per.EVTNAME2:0 "偉大なアッバースの改革"
- flavor_per.EVTDESC2:0 "偉大なシャー、アッバースの治世はサファヴィー朝の頂点を象徴するものであった。彼は訓練された常設の軍隊を開発し、ウズベクを撃ち破り、オスマン帝国に対する彼自身の復讐を果たした。1598年に、彼は新しい首都としてエスファハーンを選んだ。芸術、特に建築の支援者として、彼は世界で最も優れたイスラム記念碑のいくつかと共にイスファハーンを飾った。彼は多くのモスク、学校、橋、主要なバザールを建設した。彼の治世の間に、ペルシアの職人や芸術家は、上質の絹、布、磁器、金属工芸、書道、模型、絨毯の製作に優れていた。"
+ flavor_per.EVTDESC2:0 "偉大なシャー、アッバースの治世はサファヴィー朝の頂点を象徴するものであった。彼は訓練された常設の軍隊を開発し、ウズベクを撃ち破り、オスマン帝国に対する彼自身の復讐を果たした。1598年に、彼は新しい首都としてエスファハーンを選んだ。芸術、特に建築の支援者として、彼は世界で最も優れたイスラム記念碑のいくつかと共にエスファハーンを飾った。彼は多くのモスク、学校、橋、主要なバザールを建設した。彼の治世の間に、ペルシアの職人や芸術家は、上質の絹、布、磁器、金属工芸、書道、模型、絨毯の製作に優れていた。"
  flavor_per.EVTNAME3:0 "偉大なアッバースの顧問"
  flavor_per.EVTDESC3:0 "シャー・アッバースは、西ヨーロッパの軍事技術を大いに賞賛し、喜んで彼の領土へのキリスト教宣教師の受け入れを歓迎し、彼自身が改宗しようとしているとしているふりさえしていた。シャーは最終的にペルシアの陸軍と海軍を改革するため、アントニーとロバート・シャーリーの2人のイングランド人の助けを借りた。その結果が出るのに長い時間はかからなかった。アッバースはポルトガル人からバーレーンを奪い、ホルムズの拠点を略奪した。しかし、ヨーロッパの顧問は、あらゆる地域で不人気であった…"
  flavor_per.EVTOPTA3:0 "イングランドの顧問を雇う。"
