Save/Update files [ci skip]

--- a/source/localisation/branching_mission_system_l_english.yml
+++ b/source/localisation/branching_mission_system_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
- select_current_branch_batch_1_missions_title:0 "§Y現在のミッションツリーを選択します：§!§O[Root.GetCurrentSelectedMissionBranchBatch1]§!"
- select_current_branch_batch_2_missions_title:0 "§Y現在のミッションツリーを選択します：§!§O[Root.GetCurrentSelectedMissionBranchBatch2]§!"
- select_current_branch_batch_3_missions_title:0 "§Y現在のミッションツリーを選択します：§!§O[Root.GetCurrentSelectedMissionBranchBatch3]§!"
+ select_current_branch_batch_1_missions_title:0 "§Y現在のミッションツリーを選択：§!§O[Root.GetCurrentSelectedMissionBranchBatch1]§!"
+ select_current_branch_batch_2_missions_title:0 "§Y現在のミッションツリーを選択：§!§O[Root.GetCurrentSelectedMissionBranchBatch2]§!"
+ select_current_branch_batch_3_missions_title:0 "§Y現在のミッションツリーを選択：§!§O[Root.GetCurrentSelectedMissionBranchBatch3]§!"
  preview_branch_batch_1_missions_1_title:0 "§Yミッションツリープレビュー：§O1§!§!"
  preview_branch_batch_1_missions_2_title:0 "§Yミッションツリープレビュー：§O2§!§!"
  preview_branch_batch_1_missions_3_title:0 "§Yミッションツリープレビュー：§O3§!§!"
@@ -36,7 +36,7 @@
  PREVIEW_COLOR:0 "§O"
  COLOR_END:0 "§!"
  NORMAL_COLOR:0 "§W"
- BYZ_unlock_branches_decision:1 "「§Y分岐ミッションプレビュー§!」ボタンが登場し、追いかけていくミッションをプレビュー表示し、選択できます。"
+ BYZ_unlock_branches_decision:1 "「§Y分岐ミッションのプレビュー表示§!」ボタンが出現し、進めていくミッションのプレビュー表示や選択ができるようになります。"
  BYZ_end_preview:1 "§Oプレビュー§!を終わります。現在選んでいるミッションが選択されます。"
  mal_decide_for_conversion:0 "改宗ルート"
  mal_decide_for_tolerance:0 "寛容ルート"
