--- a/source/localisation/domination_additional_content_l_english.yml
+++ b/source/localisation/domination_additional_content_l_english.yml
@@ -88,7 +88,7 @@
  desc_fra_riches_of_italy_modifier:1 "イタリアの富は我が大望を実現する苦闘の中で役に立つことだろう。"
  desc_fra_stable_currency_modifier:1 "革命中の不安定さは、安定通貨の導入によって鎮まった。"
  desc_fra_code_napoleon_modifier:1 "ナポレオン法典は、国内の社会基盤を改善し、庶民の生活環境を改善することを目的としている。"
- desc_fra_strong_familial_ties_modifier:1 "The strong ties between us and our subjects will help in demanding more assistance from them while enforcing unbreakable compliance."
+ desc_fra_strong_familial_ties_modifier:1 "自国と属国間の強い絆は、壊れない従順さを強制しながら、彼らからより多くの援助を要求するのに役立つだろう。"
  desc_fra_kingdom_sea_modifier:1 "商人の努力との組み合わせにより、ナポリの征服は大きな成果を上げた！"
  desc_fra_host_city_of_lights_modifier:1 "我々は今や、光の都の誇り高き守護者であり保有者である！"
  desc_fra_supplementary_pi_and_dip_rep_modifier:1 "我々が光の都を掌握することで、教皇庁に信じられないほどの影響力を与えている。"
@@ -98,7 +98,7 @@
  desc_fra_influx_of_milanese_engineers_modifier:1 "最近のミラノの土地の征服により、優秀な頭脳を我々の都市に次々と送り込む結果となった。"
  desc_fra_first_opera_house_modifier:1 "オペラの夜明けは、権力への賛歌として、王権を正当化する手段として君主にとって強力な楽器であり、大衆にとっては文化と娯楽の偉大な源です。"
  desc_fra_catholic_italy_modifier:1 "カトリックはイタリアで最も活気のある宗教だ。我々の保護の下で、それは興隆し、栄えるだろう！"
- desc_fra_suzerainty_italy_modifier:1 "Subjugating the domain of Italy is a pathway to many abilities some consider to be... unnatural."
+ desc_fra_suzerainty_italy_modifier:1 "イタリア領を征服することは、多くの能力への道だ。その方法は以下のように考える人もいる…不自然だと。"
  desc_fra_golden_march3_modifier:1 "イタリアは正当にフランス王家のものだ！"
  desc_fra_leonardo_workshop_modifier:1 "この場所には、ルネサンス期で最も有名な人物の一人、レオナルド・ダ・ヴィンチの工房がある。"
  desc_fra_centralized_commerce_modifier:1 "商業的努力の集中化は、より強力な交易の中心を設立することにつながるだけだ。"
@@ -117,9 +117,9 @@
  desc_fra_sword_of_christianity_modifier3:1 "我々は誇り高き信仰の守護者なのだ！"
  desc_fra_sword_of_christianity_modifier4:1 "我々は誇り高き信仰の守護者なのだ！"
  desc_fra_sword_of_christianity_modifier5:1 "我々は誇り高き信仰の守護者なのだ！"
- desc_fra_support_of_the_french_crown_modifier:1 "We are enjoying the support of the French crown."
+ desc_fra_support_of_the_french_crown_modifier:1 "フランス王室の支援を享受している。"
  desc_fra_provincial_road_system:1 "伝達や交通の改善、商業取引の交流を目的とした、道路や交通網の複雑な仕組み。"
- desc_fra_developing_urban_center_modifier:1 "Urban, densely-packed centers are the lifelines that tie our great nation together."
+ desc_fra_developing_urban_center_modifier:1 "都市部、人口が密集した中心部は、我が大国を結びつける生命線である。"
  desc_fra_trade_fair_prosperity_modifier:1 "国内中に広がる繁栄は、自国全土で開催される数多くの見本市に端を発しており、下層階級の繁栄にも好影響を及ぼしている。"
  desc_fra_french_dockyard_industry_modifier:1 "フランスの造船所と造船産業は、自国の海事拡張計画を支える主力となるだろう。"
  desc_fra_toulon_dockyards_modifier:1 "最も有名な造船所のひとつであるトゥーロンは、自国の海軍に誇りを持って奉仕する！"
@@ -152,7 +152,7 @@
  desc_qng_trade_center_worlds_desire_modifier:1 "交易の中心地は、貨幣と商業活動への果てしない渇望で鳴り響く！"
  desc_ara_crushed_the_catalan_estates_modifier:1 "領内の粗暴な貴族をうまく抑え込んだ。"
  desc_qng_qing_industry_modifier:1 "我々の産業は、健全な財政と産業慣行により、記録的な利益と商品量を生み出した。"
- desc_qng_new_chinese_dynasty_modifier:1 "A new dynasty has seized the helm of the Emperorship - a new era for China!"
+ desc_qng_new_chinese_dynasty_modifier:1 "新王朝が皇帝の座を掌握した－中国にとっての新時代だ！"
  desc_qng_port_of_sakam_modifier:1 "この州は、この地域の交易の流れを制御するために不可欠である。"
  desc_mjz_united_jurchens_modifier:1 "中華は女真族の統一に対して恐怖に震えるだろう。"
  desc_qng_ten_campaigns_planning_modifier:1 "天は、我々が王家の領土を拡大し、大陸全体にその名を広めるよう命じている。"
@@ -186,7 +186,7 @@
  desc_fra_defender_emperor_modifier:1 "神聖ローマ帝国の臣民は、不可侵の防衛と長期にわたる保護の下で、安全と安定を得るだろう。"
  desc_pro_natural_anchorage_of_the_mediterranean_modifier:1 "ここは地中海に面した天然の港湾であり、素晴らしい港湾を開発するには最適な場所である。"
  desc_fra_rules_the_waves_modifier:1 "我々は偉大な国家のために海洋の支配権を握っている！"
- desc_fra_university_of_paris_modifier:1 "One of the most important establishments of thought and sciences."
+ desc_fra_university_of_paris_modifier:1 "思想と科学の最も重要な施設の一つである。"
  desc_fra_jerusalem_modifier:1 "エルサレムという理念の復活は、自軍の士気を高め、聖職者に計り知れない忠誠心を与えた。"
  desc_sankin_kotai_modifier:0 "参勤交代は我々の忠臣が首都と彼らの領地を行き来する制度です。都にいるとき彼らは当然のごとく財力を誇示することが期待され、この金銭的負担で反逆させないようにします。"
  desc_pol_daugava_estuary_modifier:1 "大きな交易力を生み出す重要な河口。"
@@ -251,19 +251,19 @@
  desc_expand_the_army_mod_4:1 "議会は、軍の募集定員拡大を決定した。"
  desc_expand_the_army_mod_5:1 "議会は、軍の募集定員拡大を決定した。"
  desc_bill_of_rights_parliament:0 "§Yイベント「僭称者の蜂起」はもはや請求権の弱い後継者が即位しても発生しません。§!"
- desc_acts_of_taxation_parliament:1 "The [Root.GetParliamentOrFallbackName] has made its decision, the citizens of [Root.GetUsableName] are bound to our taxes no matter where they live. Even our most remote colonies have to pay their taxes to the [Root.GetAdjective] Crown."
- desc_act_of_representation_parliament:1 "The colonies from overseas refuse to pay us anything as long as they are not properly represented in the parliament. The [Root.GetParliamentOrFallbackName] has decided to add more seats just for our colonies. Although the additional costs negate any additional gain from taxes, it at least ensures the loyalty of our subjects."
+ desc_acts_of_taxation_parliament:1 "[Root.GetParliamentOrFallbackName]は決断した。[Root.GetUsableName]市民はどこに住んでいても自国の税を納めねばならない。最も離れた植民地でさえ、[Root.GetAdjective]王室に税金を納めねばならない。"
+ desc_act_of_representation_parliament:1 "海外の植民地は、自分たちが国会で正式に代表とされない限り、自国へのいかなる支払いも拒否している。[Root.GetParliamentOrFallbackName]は、自国の植民地のためだけに議席を増やすことを決定した。追加費用は税金からの追加利益を無効にするが、少なくとも自国の属国の忠誠は保証される。"
  desc_military_reassignment_act_modifier:1 "陸軍は追加の火力支援を緊急に必要としている。銃器の扱いに長けた海軍の海兵隊員や水兵は、戦闘能力を強化するために陸軍に配置転換された。"
- desc_acts_of_development_modifier:1 "The bureaucracy for the integration of our subjects is no longer of any value to us. As a result of this, the [Root.GetParliamentOrFallbackName] has come to the conclusion of assigning the tasks of internal development to our bureaucracy."
+ desc_acts_of_development_modifier:1 "自国の属国を統合するための官僚機構は、もはや何の価値もない。その結果、[Root.GetParliamentOrFallbackName]は、国内開発の任務を自国の官僚機構へ割り当てるという結論に達した。"
  desc_global_empire_act_modifier:1 "新世界の植民地化は、もはや我々の[Root.GovernmentName]には関係ない。その代わりに、征服によって世界帝国を拡大することに注力しなければならない。"
  desc_naval_reassignment_act_modifier:1 "[Root.GetParliamentOrFallbackName]が決定を下し、我が陸軍の兵士は大艦隊の兵士として勤務するために再配置されることになった。"
  desc_diplomatic_act_modifier:1 "[Root.GetParliamentOrFallbackName]の決定により、我が軍の軍人は外国で外交官や大使として国に奉仕することになる。"
- desc_internal_focus_act_modifier:1 "Our administration has been reallocated to the expansion of our internal infrastructure. The integration of new provinces is significantly slowed down in favor of the development of our core land."
- desc_gov_buffed_parliament_seat:1 "This province is home to a seat and therefore is strictly under the administration of the [Owner.GetParliamentOrFallbackName]."
+ desc_internal_focus_act_modifier:1 "自国の行政は、内部インフラの拡張に再分配された。新たな州の統合は、中核地の開発を優先するため、大幅に遅れている。"
+ desc_gov_buffed_parliament_seat:1 "この州には議席がある。したがって、厳密には[Owner.GetParliamentOrFallbackName]の統治下にある。"
  desc_dissolve_protectorate_timer:1 "保護国はもう存在しない。かつての富と保護がどのようなものであったにせよ、それは思い出となった。"
  desc_tripitaka_koreana_defenses:1 "高麗八万大蔵経を外国の脅威から守るため、この州は要塞の大幅な強化を受けている。"
  desc_nov_rus_asian_market_access:1 "東方への進出により、アジアの多くの市場を利用できるようになった。このことは間違いなく自国経済を大幅に向上させることだろう。"
- desc_the_righteous_army_cd:1 "The righteous peasants are taking a break. Do not disturb them."
+ desc_the_righteous_army_cd:1 "高潔なる農民たちは休憩中だ。邪魔をするな。"
  desc_civic_republicanism_focus_government:1 "政府の問題に市民として焦点を当てることで、より高い改革の能力が得られる。"
  desc_civic_republicanism_focus_expansion:1 "拡張の問題に市民として焦点を当てることで、より高い成長の能力が得られる。"
  desc_civic_republicanism_focus_technology:1 "技術の問題に市民として焦点を当てることで、より高い革新の能力が得られる。"
@@ -342,10 +342,10 @@
  mng_tranquil_dip_modifier:1 "穏やかな外交"
  mng_has_enabled_grand_coordinator_offices_tt:1 "「巡撫の官衙」が利用可能である"
  mng_3_tolearnce_heathen_trigger_tt:1 "異教徒の寛容度が§G3§!以上"
- EST_CRUSHED_EUNUCHS_TT:1 "We have crushed the Eunuchs via a §YNational Decision§!"
- mng_appeased_the_eunuchs_modifier:1 "Appeased the Eunuchs"
- mng_upset_eunuchs_modifier:1 "Upset Eunuchs"
- mng_eunuch_continue_stripping_privileges_tt:1 "Privileges of the §YEunuch§! estate will continue to be removed upon enacting this decision, until their influence is low enough to curb their power"
+ EST_CRUSHED_EUNUCHS_TT:1 "§Y国家の決断§!を通じて宦官を鎮圧した"
+ mng_appeased_the_eunuchs_modifier:1 "宦官を鎮めた"
+ mng_upset_eunuchs_modifier:1 "動揺した宦官"
+ mng_eunuch_continue_stripping_privileges_tt:1 "§Y宦官§!階級の特権は、この決断が制定された時点で、彼らの影響力がその権力を抑制するのに十分低くなるまで、剥奪を継続します。"
  gov_coastal_government:0 "沿岸政府"
  scaling_with_estate_influence_tt:0 "§Y影響度に比例§!\n§Y100%§!の影響度でこの特権は以下の効果を与えます："
  scaling_with_estate_loyalty_tt:0 "§Y忠誠度に比例§!\n§Y100%§!の忠誠度でこの特権は以下の効果を与えます："
@@ -455,33 +455,33 @@
  desc_plutocratic_rule_act:1 "自国の商業共和国の支配は中央集権に利益をもたらす。"
  desc_theocratic_rule_act:1 "自国の神権的な支配は王権に利益をもたらす。"
  desc_head_of_state_act:1 "紙商品への依存は、親愛なる指導者の喪失から派生するすべての痛みと嘆きを和らげるだろう。"
- desc_zealous_court_act:1 "The court of our country is experienced in motivating religious fervor and conquest."
+ desc_zealous_court_act:1 "自国の宮廷は、宗教的熱狂と征服の動機付けはお手のものだ。"
  desc_financial_miracle_act:1 "自国民の顧問を雇用することで、きっと税制面で奇跡を起こすだろう。"
  desc_subject_obligations_act:1 "植民地に関税を要求すると同時に、彼らの自由への望みを打ち砕くという我々の手腕は、見事に発揮されている。"
  desc_big_government_act:1 "大きな政府は小さな政府よりもはるかに効率的であることは科学的に証明されおり、この議論は我々自身の行政枠の効率性によってさらに裏付けられている。"
  desc_humanitarian_administration_act:1 "征服した人々の伝統や文化を尊重するという急進的な考えは、長期的には我々に利益をもたらすかもしれない。"
- desc_blessed_construction_act:1 "By employing priests to bless and consecrate the grounds of construction, we have grounds to demand a discount from contractors and workers alike."
+ desc_blessed_construction_act:1 "建設地を祝福し、聖別する司祭を雇うことで、請負者や労働者に割引を要求する根拠を得ることができる。"
  desc_military_innovation_act:1 "繁栄？医学？文化の進歩？いや、何よりもまず、近隣諸国を圧倒し征服することで、隣国から身を守るために、戦争産業へ資金を提供しなければならない。"
- desc_efficient_war_taxes_act:1 "When our peasants and working class say 'No more!' when it comes to taxation, all we hear is 'No, more!'. By employing this tactic we will be able to not only extract more value for our treasury but also fund more condottieri contracts, a win-win!"
+ desc_efficient_war_taxes_act:1 "自国の農民や労働者階級が税金に関して「もういらない！」と言えば、我々が耳にするのは「いや、もっとだ！」である。この戦術を採用することで自国の国庫にさらに多くの額面を引き出すことができるだけでなく、より多くのコンドッティエーリ契約に資金供給できる、ウィンウィンだ！"
  desc_peace_keeping_force_act:1 "国家の安定を確保し、起こりうるすべての反乱分子を平和的に鎮圧することは、神から与えられた権利である。"
  desc_indigenous_development_act:1 "道路網の建設は、我々が暮らす社会に利益をもたらす。"
  desc_mercenary_registration_act:1 "傭兵への遅滞なき給与支払いや補給護送のために書いて残すという考えは、確かに経費削減につながるかもしれない。"
  desc_innovative_payment_techniques_act:1 "同じ傭兵を雇うにしても、単純に給料を安くしたらどうだろう？まさに革新的なアイデアだ！"
  desc_plutocratic_ethos_act:1 "我々の共和国は、強固な倫理観や縁故主義や裏取引の完全排除という基盤の上に成り立っている。"
- desc_clan_unity_act:1 "Our great tribe will survive the test of time and appear less meancing should we use our might and lavish court efficiently."
+ desc_clan_unity_act:1 "自国の偉大な部族は、自国の力と豪華な宮廷を効率的に使用することで、時の試練に生き残り、より脅威とみなされなくなるだろう。"
  desc_the_spy_network_act:1 "諜報員や外交官に特別な通行許可証を与えることで、我々はより効率的に謀略を行うことができる。"
- desc_the_smooth_integration_act:1 "By speaking our words in a collected and slow manner, we will be able to smoothen out the integration clauses around the annexation of our union subjects."
+ desc_the_smooth_integration_act:1 "母語を落ち着いてゆっくり話すことで、連合の属国併合にまつわる完全合意条項を滑らかにできるだろう。"
  desc_global_trade_networks_act:1 "海を越えた交易網の存在は、我々の収益に大きな影響を与えるだろう。"
  desc_colonial_boost_act:1 "我々の顧問は、我々が植民地に多くの人を送り込めば、植民地はより多くの人を受け入れるようになり、後々より多くの商品や税金を提供するようになるという理論を支持している。"
- desc_sailor_efficiency_act:1 "Advances in our naval infrastructure when it comes to vessels have led to our ships employing fewer sailors and costing less to repair and maintain."
- desc_diplomatic_consolidation_act:1 "The deployment of diplomatic trickery and favors will allow us to embark on a claiming spree, stretching our rightful claims from one corner of the Earth to the other."
+ desc_sailor_efficiency_act:1 "艦船に関する海軍インフラの進歩により、水夫数を減らせ、修理費や維持費も少なく済むようになった。"
+ desc_diplomatic_consolidation_act:1 "外交的な策略や便宜を図ることで、立て続けの請求に着手でき、地球の隅々まで正当な請求権を乱用できる。"
  desc_centralization_power_act:1 "すべての権力を親愛なる指導者の手に集中させた方がいいに決まっている。最も近い顧問によれば、これは絶対に理にかなっているとのことだ。"
  desc_loyal_conduct_act:1 "忠実な諜報員の組織があれば、内外の脅威から自国が守られるだろう。"
  desc_diplomatic_arms_act:1 "威勢を示し、平和的に他国に自国の利益を押し付けなければなりません。"
  desc_merchants_hire_act:1 "海軍の努力を強力な商業的存在感に注力することで、我々の船は物事の大局においてより価値を持つようになるに違いない。"
- desc_transportation_act:1 "Our advisors have come up with a wonderful idea in regards to the utilization of our fleet. By constructing sturdy maritime transportation, we will be able to have fewer poor souls perish during voyage and instead utilize them as privateers, so that they may die from cannonfire instead of attrition, truly a marvellous plan."
+ desc_transportation_act:1 "自国の顧問は、自艦隊の活用に関して素晴らしい考えを思いついた。頑健な海上輸送船を建造することで、航海中に命を落とすかわいそうな者を減らし、代わりに私掠船として活用でき、その結果、消耗ではなく砲火で亡くなるだろう。本当に素晴らしい計画だ。"
  desc_maritime_expertise_act:1 "より多くの兵士を陸軍から海軍に送り込むことで、少なくともより強力な海兵隊を活用することができるようになり、同時に船を維持するためのコストも削減できる。"
- desc_client_state_act:1 "Our ruler's keen bussiness nature whilst conducting deals will lead to not only a higher manpower levy from our subjects but also the creation of new types of subjects, what a time to be alive!"
+ desc_client_state_act:1 "自国の支配者の商業的才能は、取引する際に、属国からより多くの人的資源を取り立てるだけではなく、新形式の属国を生み出すことにもつながるだろう。まさに生きていることが素晴らしい時代ですね！生きていてよかった！"
  desc_native_emissaries_act:1 "使者の制度を通じて隣国を根絶やしにする意図を伝えることで、他の隣国からの抵抗は確実に少なくなるはずだ。"
  desc_mobile_siege_engines_act:1 "我々の交通制度は、より迅速に展開し、確実に攻撃を仕掛けてくる敵の壁により壊滅的な打撃を与えることを可能にする。"
  desc_bolstered_defence_act:1 "要塞周辺の道路網を利用すれば、驚異的な数の守備隊で城を埋め尽くすことができる。"
