Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -931,7 +931,7 @@
  castilian_civil_war.100.a:0 "我々とアラゴンとの接近をもたらすだろう。"
  castilian_civil_war.100.b:0 "我々とポルトガルとの接近をもたらすだろう。"
  polish_noble_rebels_demand:0 "選挙君主制への回帰"
- polish_noble_rebels_demand_desc:0 "貴族たちは、騎士たちが卑しい農民の財産を支配していた古いやり方に戻ることを要求している。彼らはこの国の商人と農民の時代の終わりを要求している。"
+ polish_noble_rebels_demand_desc:0 "貴族たちは、騎士たちが従属的な農民の領地を支配していた昔のやり方に戻ることを要求している。彼らはこの国の商人と農民の時代の終わりを要求している。"
  polish_noble_rebels_title:0 "マグナート"
  polish_noble_rebels_name:0 "$COUNTRY$のマグナートの反乱軍"
  polish_noble_rebels_desc:0 "マグナートの反乱軍は、通常は自由主義的改革のために、彼らの君主に不満を持っている。彼らは大部分が騎兵から成る専門の軍隊を編制する。"
@@ -2316,7 +2316,7 @@
  cb_defender_of_the_faith_desc:0 "奴らは真の信仰に忠実でない！"
  RELIGIUS_UNITY_LABEL_D:0 "同じ宗教の下に、すべての州を統一するのは常に良いことです。宗教統一度が100%を下回ると、州の不穏度が増加し、カトリック国家であれば、教皇への影響力が減少します。"
  RELIG_PERFECT:0 "我々は$COUNTRY$で宗教統一度を達成し、調和して生きている！"
- RELIG_PROBLEMS:0 "我々の領域には、$RELIGION$ではない、いくつかの州があり、我々に問題を引き起こしています。下のリストには、現在真の信仰に従っていない地域が含まれています。"
+ RELIG_PROBLEMS:0 "我々の領域には$RELIGION$ではない州が存在しており、我々に問題を引き起こしています。下のリストには、現在真の信仰に従っていない州が含まれています。"
  RELIG_UNITY_FROM_PROVINCES:0 "州から：$VAL|G1%$"
  RELIG_UNITY_EFFECT:0 "このレベルの宗教統一度を持つことで以下の効果があります："
  HAVE_LESS_RELIGIUS_UNITY_THAN:0 "宗教統一度が右記未満："
