--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -231,7 +231,7 @@
  flavor_ven.6.a:0 "今日はオスマンが死ぬのに良い日だな！"
  flavor_ven.6.b:0 "戦争の危険を冒すことはできない"
  flavor_ven.7.t:0 "ヴェネチアのモレア領有主張"
- flavor_ven.7.d:0 "ヴェネツィア大使は、彼らがモレア半島の請求権を主張したことを我々に知らせてきた。これは明らかに容認できず、彼らは処罰されなければならない。"
+ flavor_ven.7.d:0 "ヴェネツィア大使から、モレア半島の請求権を主張するという連絡が入った。明らかに容認できることではなく、彼らは処罰されなければならない。"
  flavor_ven.7.a:0 "これは戦争を意味するぞ！"
  ven_monte_nuovo:0 "モンテ・ヌオーヴォ"
  desc_ven_monte_nuovo:0 "新しい種類の債券や借金はずっと効率的である。"
@@ -1803,7 +1803,7 @@
  flavor_tur.EVTDESC3357:1 "メフメト2世は、拡大した帝国の管理者を訓練するために、新たに建設されたトプカプ宮殿の中庭（エンデルーン）に教育機関を設立した。生徒には、最も有望な強制徴用新兵（大半はバルカンから徴集されたキリスト教徒の若者）が選ばれ、イスラム信仰、科学、軍事訓練を受けた。彼らは、トルコ語、アラビア語、ペルシア語の3言語で能力を伸ばすことが期待されていた。これはスルタンの家族に仕えるための準備となり、それによって彼らは、ベイやパシャの階級を持つ国家管理者として卒業することを望んだ。宮殿の学校で訓練され、スルタンに忠実である強制徴用新兵の中で国家の役職についている人材は、15世紀と16世紀の間、世襲制のオスマン帝国のシステムの屋台骨を形成した。"
  flavor_tur.EVTOPTA3357:0 "エンデルーンを設立する。"
  flavor_tur.EVTOPTB3357:1 "代わりにティマール制を拡大する"
- flavor_tur.EVTNAME3358:1 "メフメト2世の農地改革"
+ flavor_tur.EVTNAME3358:1 "メフメト2世の封土制改革"
  flavor_tur.EVTDESC3358:1 "メフメト2世は、集権的な君主であり、彼はオスマン帝国内で個人的な権力をあらゆる手を尽くして拡大しようとした。彼の治世の終わり近くに、彼はオスマン軍をさらに強化して、代わりにティマール制で彼らを支えた基盤であるワクフの収入を移転することで、ウラマーの権力を減らそうとした。イスラム法の下で違法とされたこの動きは、広範な怒りを引き起こし、1481年のメフメトの死後、彼の息子のバヤズィトによってすぐに覆された。"
  flavor_tur.EVTOPTA3358:1 "ティマール制を拡大する。"
  flavor_tur.EVTOPTB3358:1 "ウラマーだけを残す。"
