--- a/source/localisation/rights_of_man_l_english.yml
+++ b/source/localisation/rights_of_man_l_english.yml
@@ -490,7 +490,7 @@
  harem_events.2.a:0 "[Root.Monarch.GetTitle]万歳！"
  harem_events.2.a.tt:0 "時間だけが、§Y[Root.Monarch.GetName]§!がどんな支配者となるかを教えてくれる。"
  harem_events.3.t:0 "サンジャガ・チクマ"
- harem_events.3.d:0 "我々のお気に入りの後継者である、[Root.Heir.GetName]は若く、まだ人生と良い支配者になる方法について学ぶことが多くある。我々の大部分の宰相は、我々の息子たちを小さな州の知事や支配者として行動させる王朝の伝統を支えることが我々の義務だと感じている。こうして彼らは支配者となることを学ぶことができる。適切に強力な州を割り当てることで、将来の継承闘争の可能性を減らすこともできる。[sancaga_cikma_province.GetName]は過去にこのような長官の役目を務めてきたが、[Root.Heir.GetName]には非常に適当だろう。\n一方で、母親のヴァリデ・スルタンを含む他の者たちは、若い[Root.Heir.GetName]にとって、[Root.Heir.GetSheHe]が良い教師に絶えず接触できる帝国のハレムの壁の中で彼を知る人によって教育の恩恵を受けることができると感じている。この方法では、[Root.Heir.GetSheHe]が時期尚早の政治的野心を発達させる可能性のあるあらゆる場所から[Root.Heir.GetSheHe]を遠ざけることになるだろう。"
+ harem_events.3.d:0 "我々のお気に入りの後継者である、[Root.Heir.GetName]は若く、まだ人生と良い支配者になる方法について学ぶことが多くある。ほとんどの宰相たちは、我々の息子たちを小さな州の知事や支配者として任命するという王朝の伝統を守ることが我々の義務だと感じている。こうすることで息子たちは統治者とは何かを学ぶことができる。適切な力を持つ州を割り当てることで、将来の継承闘争の可能性を減らすこともできる。[sancaga_cikma_province.GetName]は過去にこのような知事職の役目を務めた場所であり、[Root.Heir.GetName]には非常に適当だろう。\n一方で、母親のヴァリデ・スルタンを含む他の者たちは、若い[Root.Heir.GetName]にとって、良い教師といつでも教えを請える帝国のハレムの壁の中で教育を受けるのが最も有益だろうと感じている。そうすれば、[Root.Heir.GetSheHe]が時期尚早の政治的野心を抱く可能性がある場所から遠ざかることになるだろう。"
  harem_events.3.a:0 "[sancaga_cikma_province.GetName]を統治することで、[Root.Heir.GetHerHim]にとって良いことを多く行うだろう。"
  harem_events.3.a.tt:0 "§Y[Root.Heir.GetName]§!は§Y[sancaga_cikma_province.GetName]§!の完全な支配権を与えられ、すべてがうまくいけば、支配者としての能力が向上するかもしれません。"
  harem_events.3.b:0 "若い[Root.Heir.GetWomanMan]にとっては帝国のハレムが最適だ！"
@@ -520,7 +520,7 @@
  waqf_for_dead_valide_sultan:0 "ヴァリデ・スルタン記念基金"
  desc_waqf_for_dead_valide_sultan:0 "我々は、帝国の母ヴァリデ・スルタンの思い出のモスクや炊き出しを支援するために、この州内の多数の資源から収入を確保している。"
  harem_events.9.t:0 "通過儀礼"
- harem_events.9.d:0 "古のスルタン同様、[Root.Heir.GetName]も自身の名を征服者、帝国を馬上から導く[Root.Monarch.GetTitle]として広めたがっている。[Root.Monarch.GetName]の健康が依然として良好であり、後継者を実際に戦場に連れて行くことはできないため、正夢になるのは不確実なままだ。このことは、[Root.Heir.GetName]が他のシェフザデによって嘲笑され、[Root.Heir.GetHerHis]の母親が[Root.Heir.GetHerHim]に軍の指揮権を与えるよう[Root.Monarch.GetName]に懇願するまでに至っている。\nこれは不合理な要求ではないが、我々のお気に入りの[Root.Heir.GetHerHis]の人生と手足を危険にさらそうとする動機には疑問を感じざるを得ない。"
+ harem_events.9.d:0 "かつてのスルタンと同様、[Root.Heir.GetName]も征服者として、馬上から帝国を率いる[Root.Monarch.GetTitle]として自身の名を残すことを望んでいる。[Root.Monarch.GetName]の健康が依然として良好であり、後継者が実際に戦場に行くことを許していないため、この夢の実現は不確実なままだ。このことは、[Root.Heir.GetName]が他のシェフザデによって嘲笑され、[Root.Heir.GetHerHis]の母親が[Root.Heir.GetHerHim]に軍の指揮権を与えるよう[Root.Monarch.GetName]に懇願するまでに至っている。\nこれは不合理な要求ではないが、我々のお気に入りを煽り、[Root.Heir.GetHerHis]の生命と手足を危険にさらそうとする人々の動機には疑問を感じざるを得ない。"
  harem_events.9.a:0 "これは[Root.Heir.GetHerHim]にとってより良いだろう。"
  harem_events.9.b:0 "ハレムの中がより安全だろう。"
  harem_events.10.t:0 "家族内の裏切り"
@@ -570,13 +570,13 @@
  harem_events.19.d:0 "[Root.Owner.Consort.GetName]は、[Root.Owner.Monarch.GetTitle]の心を捕えただけでなく、その能力によって活動的な女性である。[Root.Owner.Monarch.GetName]の領土を強化する絶え間ない努力は、[Root.Owner.Monarch.GetHerHim]にとって、そして[Root.Owner.Monarch.GetHerHis]の国民にとって、双方に恩恵をもたらしている。\n最近では、[Root.GetName]において[Root.Owner.Consort.GetName]による資金提供を受けている多くの慈善事業が、その地域全体を開花させた。"
  harem_events.19.a:0 "何と偉大な女性だ。"
  charitable_work_of_haseki:0 "ハセキ・スルタンの慈善活動"
- desc_charitable_work_of_haseki:0 "ハセキ・スルタンは、この地域の慈善事業に多大な貢献をしてきた。水道橋、モスク、病院が建設されており、貧しい人々が養われている。その結果、地域全体が繁栄している。"
+ desc_charitable_work_of_haseki:0 "ハセキ・スルタンは、この地域の慈善事業に多大な貢献をしてきた。水道橋、モスク、病院が建設され、貧しい人々に食事が与えられた。その結果、地域全体が繁栄することとなった。"
  harem_events.20.t:0 "[Root.Consort.GetName]は挑戦を受けた"
- harem_events.20.d:0 "ハセキ・スルタンは[Root.Monarch.GetTitle]の愛すべき配偶者でもあるだけでなく、帝国ハレムの支配者であり、スルタンの母を除いて、帝国で最も強力な女性である。この地位を獲得して維持することは、ハレムのすべての仲間の夢である。\nしたがって、野心的で若い女性が[Root.Monarch.GetTitle]の目に止まったことは驚くべきものではない…"
+ harem_events.20.d:0 "ハセキ・スルタンは[Root.Monarch.GetTitle]の愛すべき配偶者でもあるだけでなく、帝国ハレムの支配者であり、スルタンの母を除けば帝国で最も権力を持っている女性である。この地位を獲得して維持することは、ハレムに属する妃すべての夢である。\nしたがって、野心的で若い女性が[Root.Monarch.GetTitle]の目に留まったことは驚くべきものではない…"
  harem_events.20.a:0 "決して[Root.Consort.GetName]を放棄することはできない。"
  harem_events.20.b:0 "貴重な時間だ。"
- harem_events.21.t:0 "[Root.Monarch.GetTitle]のための競争"
- harem_events.21.d:0 "[Root.Monarch.GetName]がまだ彼の配偶者たちの中でお気に入りの名前を挙げていないため、それらすべてがスルタンのそばの正当な地位を獲得するため策略を巡らせている。帝国のハレムは陰謀に満ちており、現在、帝国で想像できる最高の栄誉の一つである、ハセキ・スルタンの地位をよく理解した選択肢が作られている。幸いなことに、[Root.Monarch.GetName]の母親はハレムの政治をしっかりと把握しており、[Root.Monarch.GetName]に、彼女が良い候補者になると感じている配偶者を提示している。"
+ harem_events.21.t:0 "[Root.Monarch.GetTitle]の争奪戦"
+ harem_events.21.d:0 "[Root.Monarch.GetName]がまだ配偶者たちの中でお気に入りの名前を挙げていないため、配偶者すべてがスルタンの正当な隣の座を獲得しようと策略を巡らせている。帝国のハレムは陰謀に満ちており、現在、帝国で考えられる最高の栄誉の一つである、ハセキ・スルタンの地位を十分な情報に基づいて選択することは、ほとんど不可能に思えるだろう。幸いなことに、[Root.Monarch.GetName]の母親はハレムの政治をしっかりと把握しており、[Root.Monarch.GetName]に、彼女が良い候補者になると思われる配偶者を紹介した。"
  harem_events.21.a:0 "素晴らしい！"
  harem_events.21.b:0 "母よ、私のことは私が決める…"
  harem_events.21.c:0 "選択を保留しておこう。"
