Save/Update files [ci skip]

--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -3030,7 +3030,7 @@
  bahmani_primogeniture:0 "バフマニーの長子相続制"
  bahmani_primogeniture_desc:0 "現君主の長兄へ常に王位を相続させるという珍しい慣習は、当初、力に飢えた摂政や日和見の貴族たちが子供の君主を利用しようとしたり、妬んだ親族が王位の主張を支持したりすることに対し少しも躊躇わないため、時には我が領域で不安定さを生み出した。しかし今では慣行はしっかりと制度化され、継承の時が来ると我が王朝の真なる後継者に反対するものはほぼいない。"
  madrasa_of_mahmud_gawan:0 "デカンの大マドラサ"
- madrasa_of_mahmud_gawan_desc:0 "ここ何年もの間、我が国家は自分の前にある最高の国家を合併させると同時に、より大きなムスリム世界から有能な人物を流出させている。これはエルシャ、アラブ、マラーティー、テルグ、カンナダのいずれの性質でもない豊かで国際的なデカン文化を生み出した。我が首都で主要なマドラサを建造することは、デカン学問のさらなる発展を促し、我が国家の偉大さを世界に示すであろう。"
+ madrasa_of_mahmud_gawan_desc:0 "自国は長年にわたり、大ムスリム世界から有能な人物を流出させる一方で、先人の諸国家の優れたものを取り入れてきた。この結果、ペルシア、アラブ、マラーティー、テルグ、カンナダのいずれでもない豊かで国際的なデカン文化を生み出した。首都で主要なマドラサを建造することは、デカン学問のさらなる発展に役立ち、我が国家の偉大さを世界に示すであろう。"
  JAJ_ideas:0 "スィッディーのアイデア"
  JAJ_ideas_start:0 "スィッディーの伝統"
  JAJ_ideas_bonus:0 "スィッディーの宿願"
@@ -4813,7 +4813,7 @@
  otm_brave_retainers:0 "忠臣"
  otm_brave_retainers_desc:0 "我々には支族や、他にも古く独立志向の強い分家からなる多くの郎党がいる。彼らは何らかの形で独立志向の強い集団に属してはいるが、大友氏に対する最高の献身と、繁栄への熱意を示している。そのような忠実な家臣たちを持ち、我々は本当に恵まれている。"
  otm_nanban_trade:0 "南蛮貿易の歓迎"
- otm_nanban_trade_desc:0 "他の者たちは外国人を野蛮人として敬遠するかもしれないが、我々は彼らとの交易の恩恵と利点を認識している。彼らは我々の港ではいつも歓迎されることを知っており、我々は商売敵たちよりも交易網を拡大することができる。"
+ otm_nanban_trade_desc:0 "他の者たちは外国人を野蛮人として敬遠するかもしれないが、我々は彼らとの交易の恩恵と利点を認識している。我々の港ではいつでも歓迎されることを彼らに知ってもらえば、我々は商売敵たちよりもさらに交易網を拡大することができるだろう。"
  otm_christian_conversion:0 "キリスト教への改宗"
  otm_christian_conversion_desc:0 "我々の外国人との交流によって、大友氏の中でキリスト教の信仰が関心を集めている。キリスト教徒は我々の惣領や家臣の間で多くの強力な保護者を抱えており、最近の改宗者ほど熱心ではない。我らの領地がどのような路線を辿っているのかはともかく、これらのキリスト教徒の改宗者をうまく活用し、彼らの影響力と熱意を使って我々の仕事を進めよう。"
  otm_tensho_embassy:0 "天正遣欧少年使節"
