--- a/source/localisation/res_publica_l_english.yml
+++ b/source/localisation/res_publica_l_english.yml
@@ -442,7 +442,7 @@
  ideagroups.1710.d:0 "タール、木材、火薬の危険な組み合わせにより、主要な港で火災が起こるのは時間の問題だった。生産を通常レベルまで戻すには、時を要するだろう。"
  ideagroups.1710.a:0 "くそったれ！"
  ideagroups.1800.t:0 "熟練外交官"
- ideagroups.1800.d:0 "我が国の外交官の中には、我が国を取り巻く複雑な外交関係を理解できる、極めて優秀な者がいる。彼は外交における一度の失敗や、一つの正しい言葉の持つ力までよく知っているのだ。さて、この偉大な政治家をいかにして利用すべきだろうか？"
+ ideagroups.1800.d:0 "我が国の外交官の中に、我が国を取り巻く複雑な外交関係の理解に対して、先天的な才能を持つ人物がいる。彼は外交において一歩でも踏み間違うことの危うさ、適切な言葉を用いることの大切さをよく知っているのだ。さて、この偉大な政治家をいかにして利用すべきだろうか？"
  ideagroups.1800.a:0 "最も繊細な任務のために彼を利用する。"
  ideagroups.1800.b:0 "私に秘密が伝わるよう、彼を宮廷に置いておく。"
  ideagroups.1801.t:0 "正しき我々の主張"
